   - Exportable standard class format is reviewed (todo #1351).
   - Exporters can provide their own stream format (todo #1411).
   - Main window has a new 'minimal' display mode.
   - Operation template properties: fields are not masked by the scrollbar (todo #1457).
   - Plugins now advertize their DB model with their canonical name (todo #1461).
   - Recurrent operation is not generated is its first amount is zero (todo #1459).
   - Recurrent operation validation is now said 'accounting' (todo #1460).
   - Restore assistant let the user display the metadata of the archive (todo #1450).
   - Settlement page: a footer paned let the user align footer amounts with the treeview (todo #1467).
   - Settlement page: homogeneize footer display.
   - User may choose display at startup, and when a dossier is opened or closed.

 Bug fixes:

   - configure.ac: display 'pwirender' plugin build status (todo #1453).
   - ofaEntryPage: fix initial display of the extended filter (todo #1464).
   - ofaEntryPageDelconf: review dialog layout (todo #1468).
   - ofaEntryStore: fix ENT_TIERS column type.
   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456).
   - ofaHub: fix releasing object with floating references. 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - ofaReconcilPage: initialize the empty light in the footer.
   - ofaReconcilPage: align header and footer amounts with selection balance.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - my_utils_window_position_get(): new function.
   - ofaAccountBalance: new (computing) class which implements ofaIExportable.
   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.